Untested but AS should work on rest of pages now

--- a/PSS/PSS/Pages/Starred.razor
+++ b/PSS/PSS/Pages/Starred.razor
@@ -35,15 +35,15 @@
             {
                 <div class="thumbnail">
                     <span class="material-icons-outlined star-icon">star</span>
-                    <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons checkbox unchecked">check_circle</span>
+                    <span @onclick="@(() => ToggleCheck(media.uuid))" id="@media.uuid" class="material-icons checkbox unchecked">check_circle</span>
                     @if (media.thumbnail != null) //Video
                     {
                         <span class="material-icons-outlined video-icon">play_circle_outline</span>
-                        <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" src="data:image/jpg;base64,@media.thumbnail" alt="@S.LIB_REQUEST_PATH/@media.path" loading="lazy"/>
+                        <img @onclick="@(() => ImgClicked(media.uuid))" src="data:image/jpg;base64,@media.thumbnail" alt="@S.LIB_REQUEST_PATH/@media.path" loading="lazy"/>
                     }
                     else
                     {
-                        <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" src="@S.LIB_REQUEST_PATH/@media.path" alt="@S.LIB_REQUEST_PATH/@media.path" loading="lazy"/>
+                        <img @onclick="@(() => ImgClicked(media.uuid))" src="@S.LIB_REQUEST_PATH/@media.path" alt="@S.LIB_REQUEST_PATH/@media.path" loading="lazy"/>
                     }
                 </div>
             }
@@ -55,7 +55,7 @@
     private static string headerVis;
     private static string albumsVis;
     private static List<C.MediaRow> starredList;
-    private static List<string> selectedItems; //Stores all items (paths) user selected. If unchecked, removed from list.
+    private static List<Guid> selectedItems; //Stores all items (paths) user selected. If unchecked, removed from list.
 
     private static string choiceVis;
     private static string choiceMsg;
@@ -81,7 +81,7 @@
     protected override void OnInitialized()
     {
         starredList = C.LoadStarred();
-        selectedItems = new List<string>(); //Reset on page load/refresh
+        selectedItems = new List<Guid>(); //Reset on page load/refresh
         headerVis = "hidden";
         albumsVis = "hidden";
         choiceVis = "hidden";
@@ -92,25 +92,25 @@
     
     private static async void DownloadSelected()
     {
-        F.CopyItemsToZipPath(selectedItems);
+        F.CopyItemsToZipPath((from media in starredList where selectedItems.Contains(media.uuid) select media.path).ToList());
         zipFilename = await F.CreateDownloadZip();
     }
 
-    private async Task ToggleCheck(string id) //id = string path
+    private async Task ToggleCheck(Guid uuid)
     {
-        string newClass = await JSRuntime.InvokeAsync<string>("toggleCheck", id);
+        string newClass = await JSRuntime.InvokeAsync<string>("toggleCheck", uuid);
         if (newClass.Contains("unchecked"))
-            selectedItems.Remove(id);
-        else if (!selectedItems.Contains(id)) //Needed to prevent adding dupes when shift clicking
-            selectedItems.Add(id);
+            selectedItems.Remove(uuid);
+        else if (!selectedItems.Contains(uuid)) //Needed to prevent adding dupes when shift clicking
+            selectedItems.Add(uuid);
 
         headerVis = selectedItems.Count > 0 ? "visible" : "hidden";
 
-        //Get starredList currentIndex of latest selected thing. Needed only for shift click
+    //Get mediaList currentIndex of latest selected thing. Needed only for shift click
         int index = -1;
         for (int i = 0; i < starredList.Count; i++)
         {
-            if (starredList[i].path != id) continue;
+            if (starredList[i].uuid != uuid) continue;
             index = i;
             break;
         }
@@ -129,7 +129,7 @@
     {
         for (int i = startIndex; i <= endIndex; i++)
         {
-            string currentID = starredList[i].path;
+            Guid currentID = starredList[i].uuid;
             if (selectedItems.Contains(currentID)) continue;
             selectedItems.Add(currentID);
             await ToggleCheck(currentID);
@@ -148,7 +148,7 @@
 
     private async Task ClearChecks()
     {
-        foreach (string item in selectedItems)
+        foreach (Guid item in selectedItems)
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
         selectedItems.Clear();
         headerVis = "hidden";
@@ -156,11 +156,11 @@
         choiceVis = "hidden";
     }
 
-    private async Task ImgClicked(string uuid, string path)
+    private async Task ImgClicked(Guid uuid)
     {
         await GetCtrlDown();
         if (selectedItems.Count > 0 || ctrlDown)
-            await ToggleCheck(path);
+            await ToggleCheck(uuid);
         else
             navigationManager.NavigateTo($"/view-starred-item/{uuid}");
     }
@@ -179,9 +179,9 @@
 
     private async void DeleteSelected()
     {
-        foreach (string path in selectedItems.ToList()) //https://stackoverflow.com/a/604843
+        foreach (Guid uuid in selectedItems)
         {
-            // C.MoveToTrash(path); TODO
+            C.MoveToTrash(uuid);
             headerVis = "hidden";
         }
         await ClearChecks();
