--- a/PSS/PSS/Pages/UploadApply.razor
+++ b/PSS/PSS/Pages/UploadApply.razor
@@ -174,7 +174,7 @@
             try
             {
                 File.Move(file.fullPath!, newPath);
-                rowsAffected += C.InsertMedia(newShortPath, file.dateTaken, file.thumbnail);
+                rowsAffected += C.InsertMedia(newShortPath, file.dateTaken, file.uuid, file.thumbnail);
             }
             catch (IOException e)
             {
