GPO import now calls UpdateStatus outside the loop and UA now actually calls it on init

--- a/PSS/PSS/Pages/UploadApply.razor
+++ b/PSS/PSS/Pages/UploadApply.razor
@@ -116,6 +116,7 @@
         warningChecked = false;
         errorChecked = false;
         infoChecked = true;
+        UpdateStatus();
     }
 }
 
