Add delete button for each item in UA, just like GPO has

--- a/PSS/PSS/Pages/UploadApply.razor
+++ b/PSS/PSS/Pages/UploadApply.razor
@@ -1,4 +1,5 @@
 @page "/apply-upload"
+@using Microsoft.VisualBasic.FileIO
 
 <title>Apply Upload - PSS</title>
 <link href="css/UploadApply.css" rel="stylesheet">
@@ -64,6 +65,7 @@
                 if (allFiles[i].alreadyInLib){<span class="errorSpan">Item already in library. Won't upload.</span>}
                 
                 <button class="iconBtn" title="Remove This Item From the Upload" @onclick="@(() => { allFiles.RemoveAt(ii); UpdateStatus(); })"><span class="material-icons">close</span></button>
+                <button class="iconBtn" title="DELETE This Item From the Upload" @onclick="@(() => { FileSystem.DeleteFile(allFiles[ii].fullPath, UIOption.OnlyErrorDialogs, RecycleOption.SendToRecycleBin); allFiles.RemoveAt(ii); UpdateStatus(); StateHasChanged(); })"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
             }
             </div>
         }
