Rename IndexAndStarred.css to IndexStarredNoDT.css, and copy Index and use that for No DT page

--- a/PSS/PSS/Pages/Index.razor
+++ b/PSS/PSS/Pages/Index.razor
@@ -2,7 +2,7 @@
 @inject NavigationManager navigationManager;
 
 <title>Photos - PSS</title>
-<link href="css/IndexAndStarred.css" rel="stylesheet"/>
+<link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 
 @{
     <header style="visibility: @headerVis">
