--- a/PSS/PSS/wwwroot/css/IndexStarredNoDT.css
+++ b/PSS/PSS/wwwroot/css/IndexStarredNoDT.css
@@ -1,4 +1,4 @@
-/* Index and Starred are basically the exact same page */
+/* Index, Starred, and No DT are basically the exact same page */
 * {
     user-select: none;
 }
