--- a/PSS/PSS/Pages/Starred.razor
+++ b/PSS/PSS/Pages/Starred.razor
@@ -2,7 +2,7 @@
 @inject NavigationManager navigationManager;
 
 <title>Starred - PSS</title>
-<link href="css/IndexAndStarred.css" rel="stylesheet"/>
+<link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 
 @{
     <header>
