--- a/PSS/PSS/Shared/ViewItem.razor
+++ b/PSS/PSS/Shared/ViewItem.razor
@@ -64,7 +64,7 @@ Optional Parameters:
         <div id="infoDiv" style="visibility: @infoVis">
             <div class="dataDiv" title="Date Taken">
                 <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
-                <span>@ogDateTaken.ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
+                <span>@(ogDateTaken == null ? "No Date Taken" : ogDateTaken?.ToString("ddd, MMM d, yyyy h:mm:ss tt"))</span>
                 <button class="iconBtn" @onclick="@(() => editDateDivVis = "visible")"><span class="material-icons-outlined">edit</span></button>
             </div>
             
@@ -167,8 +167,8 @@ Optional Parameters:
     public int AlbumID { get; set; } = -1;
     
     private static string shortPath;
-    private static DateTime ogDateTaken; //Original
-    private static DateTime newDateTaken;
+    private static DateTime? ogDateTaken; //Original
+    private static DateTime? newDateTaken;
     private static string editDateDivVis;
 
     private static string newFilename, editFilenameDivVis, filenameErrorVis, filenameErrorText;
