Addressed a few random TOODs; items I forgot to comment back in during DB work

--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -190,7 +190,7 @@
         Directory.CreateDirectory(S.tmpFolderPath);
         
         //Empty trash.
-        //foreach (C.MediaRow item in C.LoadMediaTrash()) C.PermDeleteItem(item.path); TODO
+        foreach (C.MediaRow item in C.LoadMediaTrash()) C.PermDeleteItem(item.uuid);
     }
 
     private static void ApplyBtnClicked()
